--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <p class="current-price">$149.99</p>
             <p class="old-price"><span id="old-price">$169.99</span></p>
           </div>
-          <button><img src="images/icon-cart.svg" alt="" />Add to Cart</button>
+          <button>
+            <img src="../images/icon-cart.svg" alt="" />Add to Cart
+          </button>
         </div>
       </div>
     </main>
